// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Analyzers TSLintAnalyzer should analyze a project with installation correctly 1`] = `
Object {
  "tslint": true,
  "tslintInstallation": Object {
    "declared": "5.12.1",
    "installed": "5.15.0",
    "latest": Any<String>,
    "location": "devDependencies",
  },
}
`;

exports[`Analyzers TSLintAnalyzer should analyze a project without installation correctly 1`] = `
Object {
  "tslint": true,
  "tslintInstallation": Object {
    "declared": null,
    "installed": null,
    "latest": Any<String>,
    "location": null,
  },
}
`;

exports[`Analyzers TSLintAnalyzer should analyze a project without tslint correctly 1`] = `
Object {
  "tslint": false,
}
`;
